--- a/bejeweledDJTS/empty-example/style.css
+++ b/bejeweledDJTS/empty-example/style.css
@@ -5,4 +5,21 @@ main {
     font-size: 20px;
     text-align: center;
     margin: auto;
+    margin-top: -10px;
+    padding-top: 5px;
+}
+
+#score {
+    padding-right: 25px;
+}
+
+body {
+    display: flex;
+    justify-content: flex-start;
+}
+
+input {
+    margin-top: 280px;
+    margin-bottom: 280px;
+    margin-left: 280px;
 }
